# about

./: .gitignore  404.html  DESCRIPTION  Data Submission Guidelines.Rmd  ERDDAP_xml_template.Rmd  IYS2022_Data_template.xlsx  IYS2022_Data_template_11_15_2021.xlsx  IYS2022_Data_template_11_18_2021.xlsx  _site.yml  build-page.yaml  citations.json  data_products.Rmd  dataset-summary.R  dataset-summary.Rmd  generate_description.R  index.Rmd  index.html  main.py  mkdocs.yml  pyproject.toml  readme.md  registry.Rmd  sitemap.xml  ~$IYS2022_data_template.xlsx
.github/workflows/: build-page.yml  test_deploy.yml  update.yml
assets/: iys_citations.csv
assets/data/: iys_citations.csv
assets/stylesheets/: extra.css
data/: IYS_events.csv
data-unavailable/: index.html
data_submission_guidelines/: index.html
docs/: Data-Submission-Guidelines.html  Draft IYS Data Policy_May312021.docx  ERDDAP_xml_template.html  GA_script.html  IYS2022_Data_template.xlsx  IYS2022_Data_template_final.xlsx  IYS2022_Template_2021_08_12.xlsx  IYS2022_data_template.xlsx  about.md  data-unavailable.html  data-unavailable.md  data_products.html  data_submission_guidelines.md  dataset-summary.html  index.html  index.md  not_published.csv  published.csv  readme.html  registry.html  resources.md
docs/assets/: relationships.html
docs/data_package_example/: README  data.xlsx
resources/: index.html
site/: 404.html  index.html  publications.html  sitemap.xml
site/assets/: relationships.html
site/data-unavailable/: index.html
site/data_submission_guidelines/: index.html
(+10 files in other folders)
